# CoolEasy

./: .gitignore  Cargo.toml  CoolEasy.code-workspace  README.md
cool_easy/: Cargo.toml
cool_easy/src/: lib.rs
cool_easy/tests/: tests.rs
cool_easy_macros/: Cargo.toml
cool_easy_macros/src/: lib.rs
examples/basic/: .gitignore  Cargo.toml  input.css  start.sh  tailwind.config.js  vercel.json
examples/basic/api/: about.rs  index.rs
examples/basic/public/: style.css
examples/basic/src/: lib.rs
