[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0.86", features = ["raw_value"] }
serde_derive = "1.0.9"
rand = "0.8.5"
url = "2.3.1"
vercel_runtime = "0.3.4"

cool_easy = { git = "https://github.com/AlexTDWilkinson/CoolEasy.git" }

# Uncomment these for local development.
# cool_easy =  { path = "../../cool_easy" }
# cool_easy_macros = { path = "../../cool_easy_macros" }

validator = { version = "0.16", features = ["derive"] }
serde_qs = "0.12.0"
femark = "0.1.3"

[lib]
path = "src/lib.rs"

[[bin]]
name = "about"
path = "api/about.rs"

[[bin]]
name = "index"
path = "api/index.rs"


